# DEM-Maker

./: README.md  dependencies.py  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .gitignore  backend-x86_64-pc-windows-msvc.py  nuitka-crash-report.xml  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/data/: items.json
backend/app/routers/: dem_router.py  drone.py  image.py  items.py  ply_router.py  process.py  websockets.py
backend/app/services/: __init__.py  dem_service.py  drone_service.py  ply_service.py  record_service.py  stream_service.py
backend/app/services/dem/: __init__.py  dem_service.py  evaluator.py  gp_fliter.py  interpolator.py  obj_exporter.py  saver.py
backend/app/services/ply/: __init__.py  colmap_input.py  eval.py  ply_service.py
backend/app/services/ply/models/: net.py  patchmatch.py
ply/: eval.py
ply/models/: module.py  patchmatch.py
pointcloud_dem/: README.md
pointcloud_dem/src/: dem_save.py  interpolator.py  run_dem_to_obj.py  run_evaluate.py  run_generate.py
service/: dem_evaluator.py  groundPoint_fliter.py  interpolator.py  run_dem_to_mesh.py  run_dem_to_obj.py  run_generate.py
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/assets/icons/: Icon3d.vue  IconDashboard.vue  IconImage.vue  IconShadow.vue  IconTravel.vue  IconViewArray.vue  IconViewInAr.vue
src/components/: 3DViewer.vue  DEM.vue  Dashboard.vue  Drone.vue  Origin.vue  PointCloud.vue
src/config/: api.ts
src/router/: index.ts
src/views/: HomeView.vue
