[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "djitellopy>=2.5.0",
    "fastapi[standard]>=0.115.12",
    "rasterio>=1.4.3",
    "laspy>=2.5.4",
    "pyvista>=0.45.0",
    "open3d>=0.19.0",
    "scipy>=1.15.2",
    "joblib>=1.4.2",
    "rasterio>=1.4.3",
    "imageio>=2.37.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.6.9",
]

[tool.ruff.lint]
extend-select = ["I", "N", "PL", "UP", "E501", "NPY", "RUF100"]
unfixable = ["F401"]
